# archi-twin-context

./: .dockerignore  .gitignore  README.md  pyproject.toml
demo/: Dockerfile  README.md  __init__.py  docker-compose.yml  fountain.py
demo/postgres/: init.sql
examples/: alert_machine_vibration.json  alert_network_latency.json  alert_temperature_high.json  architecture_model.yaml  manufacturing_archimate_model.xml  twin_architecture_mapping.yaml  twin_architecture_mapping_manufacturing.yaml
src/archi_twin_context/: __init__.py  archimate.py  cli.py  engine.py  enricher.py  impact.py  loaders.py  models.py  recommender.py  report.py
src/archi_twin_context/adapters/: __init__.py  base.py  postgres.py
tests/: test_db.py  test_engine.py  test_enricher.py  test_fountain.py  test_impact.py  test_loaders.py  test_recommender.py
